--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,8 @@
 
     <audio src="assets/sounds/SunnyDay.wav"></audio>
 
-    <script src="main.js"></script>
+
+    <script src="main.js"></script> <!-- To trzeba chyba usunąć gdy zaczniemy pracę z Webpackiem-->
 </body>
 
 </html>
