Move sample content on 'webpack-tests' branch.

--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>What the weather?</title>
-    <!-- <link rel="shortcut icon" href="" type="image/x-icon"> -->
-    <link href="css/main.css" rel="stylesheet" type='text/css'>
+    <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="intro">
-            <div class="wrap">
-                <h1></h1>
-                <div class="icons">
-                    <img src="assets/icons/cloud-sun-rain-solid.svg" alt="">
-                    <img src="assets/icons/sun-solid.svg" alt="">
-                    <img src="assets/icons/wind-solid.svg" alt="">
-                    <img src="assets/icons/cloud-sun-solid.svg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <audio src="assets/sounds/SunnyDay.wav"></audio>
-
-
-    <script src="main.js"></script> <!-- To trzeba chyba usunąć gdy zaczniemy pracę z Webpackiem-->
 </body>
 
 </html>
