Update Wepack configuration files. Add template "hello world" app.

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="dist/bundle.css">
-    <title>Document</title>
+    <title>What the weather?</title>
 </head>
 
 <body>
+    <img src="assets/bgimg.jpg" alt="">
 
-    <script src="dist/bundle.js"></script>
 </body>
 
 </html>
