--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="background-frame">
+            <div class="background-frame__color"></div>
+            <div class="app-frame"></div>
+        </div>
+    </div>
+    </div>
 
 
 </body>
