Add basic css rules for data section

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,9 @@
                     <p class="main__date"><span>Tuesday</span> --- <span>19 November</span></p>
                 </div>
                 <div class="main__data">
-                    <p class="data__temp-big"><span>16</span>º</p>
+                    <p class="data__temp-big"><span>16 </span>°</p>
                     <div class="data__basic">
-                        <p class="data__temp-small"><span>16</span>º / <span>9</span>º</p>
+                        <p class="data__temp-small"><span>16</span>° / <span>9</span>°</p>
                         <p class="data__conditions">Partly sunny</p>
 
                     </div>
@@ -51,22 +51,22 @@
                         <div class="forecast__day">
                             <p class="day__weekday">Mon</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>º</p>
+                            <p class="day__temp"><span>16</span>°</p>
                         </div>
                         <div class="forecast__day">
                             <p class="day__weekday">Wed</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>º</p>
+                            <p class="day__temp"><span>16</span>°</p>
                         </div>
                         <div class="forecast__day">
                             <p class="day__weekday">Thu</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>º</p>
+                            <p class="day__temp"><span>16</span>°</p>
                         </div>
                         <div class="forecast__day">
                             <p class="day__weekday">Fri</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>º</p>
+                            <p class="day__temp"><span>16</span>°</p>
                         </div>
                     </div>
                 </div>
