--- a/src/index.html
+++ b/src/index.html
@@ -35,38 +35,38 @@
                     <p class="main__date"><span>Tuesday</span> --- <span>19 November</span></p>
                 </div>
                 <div class="main__data">
-                    <p class="data__temp-big"><span>16 </span>°</p>
+                    <p class="data__temp-big"><span id="bigTemp">16 </span>°</p>
                     <div class="data__basic">
-                        <p class="data__temp-small"><span>16</span>° / <span>9</span>°</p>
-                        <p class="data__conditions">Partly sunny</p>
+                        <p class="data__temp-small"><span id="tempMax">16</span>° / <span id="tempMin">9</span>°</p>
+                        <p class="data__conditions" id="condition">Partly sunny</p>
 
                     </div>
                     <div class="data__detail">
-                        <p class="data__wind">Wind: <span>15</span> km/h</p>
-                        <p class="data__pressure">Pressure: <span>1018</span> mbar</p>
-                        <p class="data__humidity">Humidity: <span>10</span>%</p>
+                        <p class="data__wind">Wind: <span id="wind">15</span> km/h</p>
+                        <p class="data__pressure">Pressure: <span id="pressure">1018</span> mbar</p>
+                        <p class="data__humidity">Humidity: <span id="humidity">10</span>%</p>
                     </div>
-                    <div class="data__icon"></div>
+                    <div class="data__icon" id="icon"></div>
                     <div class="data__forecast">
                         <div class="forecast__day">
-                            <p class="day__weekday">Mon</p>
-                            <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>°</p>
+                            <p class="day__weekday" id="day1">Mon</p>
+                            <div class="day__icon" id="icon1"></div>
+                            <p class="day__temp"><span id="temp1">16</span>°</p>
                         </div>
                         <div class="forecast__day">
-                            <p class="day__weekday">Wed</p>
-                            <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>°</p>
+                            <p class="day__weekday" id="day2">Wed</p>
+                            <div class="day__icon" id="icon2"></div>
+                            <p class="day__temp"><span id="temp2">16</span>°</p>
                         </div>
                         <div class="forecast__day">
-                            <p class="day__weekday">Thu</p>
-                            <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>°</p>
+                            <p class="day__weekday" id="day3">Thu</p>
+                            <div class="day__icon" id="icon3"></div>
+                            <p class="day__temp"><span id="temp3">16</span>°</p>
                         </div>
                         <div class="forecast__day">
-                            <p class="day__weekday">Fri</p>
-                            <div class="day__icon"></div>
-                            <p class="day__temp"><span>16</span>°</p>
+                            <p class="day__weekday" id="day4">Fri</p>
+                            <div class="day__icon" id="icon4"></div>
+                            <p class="day__temp"><span id="temp4">16</span>°</p>
                         </div>
                     </div>
                 </div>
