Add css rules for big weather icon

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                         <p class="data__pressure">Pressure: <span>1018</span> mbar</p>
                         <p class="data__humidity">Humidity: <span>10</span>%</p>
                     </div>
-                    <div class="data__icon"></div>
+                    <div class="data__icon" data-conditions="clear"></div>
                     <div class="data__forecast">
                         <div class="forecast__day">
                             <p class="day__weekday">Mon</p>
