Add icon for geolocation

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 <div class="main__localization">
                     <form class="main__form">
                         <input type="text" class="form__search" placeholder="Enter the name of city">
-                        <div class="form__icon icon-search"></div>
+                        <input type="submit" class="form__icon" value="">
                         <ul class="form__suggestions">
                             <li class="form__list-item">
                                 <p class="form__city user-city">City</p>
@@ -33,11 +33,12 @@
                         </ul>
                     </form>
                     <p class="main__date"><span>Day</span> --- <span>-- Month</span></p>
+                    <button class="localization__findme-btn"><div class="findme-btn__icon"></div>Find me</button>
                 </div>
                 <div class="main__data">
                     <p class="data__temp-big"><span>--</span>°</p>
                     <div class="data__basic">
-                        <p class="data__temp-small"><span>--</span>° / <span>9</span>°</p>
+                        <p class="data__temp-small"><span>--</span>° / <span>--</span>°</p>
                         <p class="data__conditions">What the weather?</p>
 
                     </div>
@@ -51,22 +52,22 @@
                         <div class="forecast__day">
                             <p class="day__weekday">---</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>--</span>°</p>
+                            <p class="day__temp"><span>---</span>°</p>
                         </div>
                         <div class="forecast__day">
                             <p class="day__weekday">---</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>--</span>°</p>
+                            <p class="day__temp"><span>---</span>°</p>
                         </div>
                         <div class="forecast__day">
                             <p class="day__weekday">---</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>--</span>°</p>
+                            <p class="day__temp"><span>---</span>°</p>
                         </div>
                         <div class="forecast__day">
                             <p class="day__weekday">---</p>
                             <div class="day__icon"></div>
-                            <p class="day__temp"><span>--</span>°</p>
+                            <p class="day__temp"><span>---</span>°</p>
                         </div>
                     </div>
                 </div>
