Getting and displaying current weather works.
Error handling not so much.

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                             </li>
                         </ul>
                     </form>
-                    <p class="main__date"><span>Day</span> --- <span>-- Month</span></p>
+                    <p class="main__date">Day --- Month</p>
                     <button class="localization__findme-btn">
                         <div class="findme-btn__icon"></div>Find me
                     </button>
